test/fixtures/errors/promise_always_throw_unhandled.snapshot
<project-root>/test/fixtures/errors/promise_always_throw_unhandled.js:10
  throw new Error('One');
        ^

Error: One
    at <project-root>/test/fixtures/errors/promise_always_throw_unhandled.js:10:9
    at new Promise (<anonymous>)
    at Object.<anonymous> (<project-root>/test/fixtures/errors/promise_always_throw_unhandled.js:9:14)
    at <node-internal-frames>

Node.js <node-version>
